<resources>
    <string name="app_name">PaseAndoPaseAdor</string>
    <string name="contrasenia">Contraseña</string>
    <string name="correo_lectronico">Correo lectronico</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_pase_ando_navi">PaseAndoNavi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_map">Map</string>

    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="si_tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="login_registro">Registrate</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="registrar">Registrar</string>
    <string name="conectate">Debes conectarte</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="menu_perfil">Perfil</string>
    <string name="aceptar_paseo">Aceptar Paseo</string>
    <string name="direccion">Dirección</string>
    <string name="acerca_de">Acerca de</string>
    <string name="conectarte">Conectate</string>
    <string name="paseando">PaseAndo</string>
    <string name="ayuda">Ayuda</string>

    <string name="mision">Misión</string>
    <string name="texto_mision">Somos una empresa centrada en el cuidado de perros, siendo el vínculo entre el paseador y el dueño, ayudándolo a administrar su tiempo y no descuidar el bienestar de su mascota.</string>
    <string name="vision">Visión</string>
    <string name="texto_vision">Ser la empresa líder dentro del mercado en los próximos 5 años dándole la mejor atención tanto al usuario como a sus perros.</string>
    <string name="objetivo">Objetivo</string>
    <string name="texto_objetivo">Crear puestos de trabajo para personas interesadas en el cuidado de perros para brindarles una buena capacitación y así, dar un buen trato a las mascotas.</string>
    <string name="actualizar">Actualizar</string>
    <string name="aceptar">Aceptar</string>
    <string name="ir_al_paseo">Ir al Paseo</string>
    <string name="Restablecer_contraseña">Restablecer contraseña</string>
    <string name="Mi_servicio">Mi servicio</string>
    <string name="Home">Home</string>
    <string name="Ok">Ok</string>
    <string name="Nuevo">Nuevo</string>

</resources>
