<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="230dp"
        android:layout_height="183dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="190dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/nombre_y_apellido"
        android:backgroundTint="@color/colorPrimary"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCorreoL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:drawableTint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:drawableTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoL" />




    <EditText
        android:id="@+id/txtPassConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"

        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="30dp"

        android:onClick="ctrlBtnRegistrar"
        android:text="@string/aceptar"
        android:background="@drawable/bg_boton_solido"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassConf" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistro">

        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/si_tienes_cuenta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="ctrlBotonIngresar"
            android:text="@string/ingresar"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.constraintlayout.widget.ConstraintLayout>