<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/huellas_fondo">

    <ImageView
        android:id="@+id/imgPerfilUsuario"
        android:layout_width="170dp"
        android:layout_height="191dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/usuario" />

    <TextView
        android:id="@+id/txtNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/nombre_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfilUsuario" />

    <TextView
        android:id="@+id/txtCorreoElectronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/correo_electronico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />

    <Button
        android:id="@+id/btnMiServicio"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_boton_solido"
        android:gravity="center"
        android:onClick="ctrlBtnMiServicio"
        android:text="@string/Mi_servicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoElectronico" />

</androidx.constraintlayout.widget.ConstraintLayout>