<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/huellas_fondo">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapHome"
        android:foregroundGravity="center"
        android:layout_width="410dp"
        android:layout_height="500dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swConetate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/conectarte"
        android:textSize="20dp"
        android:background="@color/colorPrimary2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/mapHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblConectate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/conectate"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:background="@color/colorPrimary2"
        app:layout_constraintEnd_toStartOf="@+id/swConetate"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnActualizarNav"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_boton_solido"
        android:gravity="center"
        android:onClick="prbBotonActualizar"
        android:text="@string/Nuevo"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toEndOf="@+id/btnMiPaseo"
        app:layout_constraintTop_toBottomOf="@+id/mapHome" />

    <Button
        android:id="@+id/btnMiPaseo"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_boton_solido"
        android:gravity="center"
        android:onClick="ctrlBtnMiServicio"
        android:text="@string/Mi_servicio"
        android:textColor="#FFFFFF"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapHome" />


</androidx.constraintlayout.widget.ConstraintLayout>